# rm-prediction-2425

./: .clang-format  .clangd  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: Calibration.cpp.6ECB7A2060AFADE7.idx  Calibration.hpp.5432E1D1BA90192B.idx  Constants.cpp.42DDBB9ADBD8243A.idx  Constants.hpp.1B86A48B1FF3A201.idx  KalmanFilter.cpp.EB93AD1497F76020.idx  KalmanFilter.hpp.B136B95E2B8012B6.idx  Main.cpp.D9D8A45DC3F050C0.idx  Pose.cpp.D3DD5AEFB79D0A93.idx  Pose.hpp.D925463B007B6143.idx  PoseSolver.cpp.9A43C26E3F87E497.idx  PoseSolver.hpp.D3832AB177C02892.idx  SerialPort.cpp.49D04C048DD0B147.idx  SerialPort.hpp.94E868799F138DC6.idx  Test.cpp.5FD8B50B397055EB.idx  UnscentedKalmanFilter.cpp.FD49994DC211BD49.idx  UnscentedKalmanFilter.hpp.4DFB475E03D9DB5F.idx  VideoCapture.cpp.606C1B146FF6E02A.idx
config/: Constants.hpp
include/: Constants.hpp  KalmanFilter.hpp  PoseSolver.hpp  SerialPort.hpp  UnscentedKalmanFilter.hpp  VideoCapture.hpp
src/: CMakeLists.txt  CalibrationMain.cpp  Constants.hpp  GetCalibImgs.cpp  KalmanFilter.cpp  Main.cpp  PoseSolver.cpp  Test.cpp  test.cpp
src/Camera/: CMakeLists.txt
src/Camera/Calibration/: CMakeLists.txt  Calibration.cpp  Calibration.hpp
src/Camera/Capture/: CMakeLists.txt  README.md  VideoCapture.cpp  VideoCapture.hpp
src/Communication/: CMakeLists.txt  SerialPort.cpp
src/Filter/: CMakeLists.txt  Predictor.hpp  UnscentedKalmanFilter.hpp
src/Filter/AbstractFilter/: AbstractFilter.cpp  AbstractFilter.hpp  CMakeLists.txt
src/Filter/EKF/: CMakeLists.txt  ExtendedKalmanFilter.hpp
src/Filter/KF/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.hpp
src/Filter/Tracker/: CMakeLists.txt  Tracker.hpp
src/Filter/UKF/: CMakeLists.txt  UnscentedKalmanFilter.cpp
src/Pose/: CMakeLists.txt  Pose.cpp  Pose.hpp  PoseSolver.cpp
src/Settings/: CMakeLists.txt  Config.hpp
src/Tracker/: CMakeLists.txt  Tracker.hpp
src/Tracker/Filter/: CMakeLists.txt  PresetFilter.hpp
tests/: CMakeLists.txt  filter_test.cpp
